--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
         <div id="mask" class="hidden"></div>
         <section id="modal" class="hidden">
           <h2>Memo</h2>
+          <form id="form">
             <input type="text" placeholder="Todoを入力" id="input">            
-            <button type="submit" id="button">Save</button>           
+          </form>
           <ul id="ul"></ul>
+          <button type="submit" id="button">Clear</button>           
           <div id="close">Close</div>
         </section>
       </div>
