--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
         <section id="modal" class="hidden">
           <h2>Memo</h2>
           <form id="form">
-            <input type="text" placeholder="Todoを入力" id="input">            
+            <input type="text" placeholder="Todoを入力" id="input"> 
+            <button type="submit" id="save">Save</button>           
           </form>
           <ul id="ul"></ul>
-          <button type="submit" id="button">Clear</button>           
+          <button type="submit" id="clear">Clear</button>           
           <div id="close">Close</div>
         </section>
       </div>
